<resources>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCOvGz7UyGrTHxXwyo4HYT-kb3EFI7krLA</string>
    <string name="facebook_app_id">857308371322604</string>
    <string name="fb_login_protocol_scheme">fb857308371322604</string>
    <string name="app_name">FitFactory</string>
    <string name="forgot_password">Nie pamiętasz hasła? Przypomnij hasło!</string>
    <string name="remember_password">Przypomnij hasło</string>
    <string name="signUp">Nie masz konta? Dołącz do nas!</string>
    <string name="signUpSpan">zarejestruj się</string>
    <string name="signInSpan">Zaloguj</string>
    <string name="joinUs">Dołącz do nas</string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="email_address">Adres email</string>
    <string name="regulations">Oświadczam, że zapoznałem(am) się z treścią <b>Regulaminu</b> oraz oświadczam, że akceptuję jego postanowienia</string>
    <string name="insert_email">W celu zresetowania hasła, wpisz poniżej adres mailowy, który podałeś przy rejestracji i oczekuj na wiadomość z nowo wygenerowanym hasłem</string>
    <string name="map">Mapa</string>
    <string name="passes">Karnety</string>
    <string name="payment">Płatność</string>
    <string name="buy_pass">Kup karnet</string>
    <string name="yoursActivity">Twoja aktywność</string>
    <string name="exercises">Ćwiczenia</string>
    <string name="fitness_lessons">Zajęcia fitness</string>
    <string name="settings">Ustawienia</string>
    <string name="sign_out">Wyloguj</string>
    <string name="history">Historia wejść</string>
    <string name="sign_in_failed">Błąd logowania</string>
    <string name="passFragment_passName">Nazwa</string>
    <string name="passFragment_passDuration">Czas trwania</string>
    <string name="passFragment_passPrice">Cena</string>
    <string name="description">Opis</string>
    <string name="passFragment_passBenefits">Benefity</string>
    <string name="active">Aktywne</string>
    <string name="non_active">Nieaktywne</string>
    <string name="duration">%1$s - %2$s</string>
    <string name="pricePerMonth">%1$.2f zł/msc</string>
    <string name="price">%1$.2f zł</string>
    <string name="distance">Znajdujesz się %1$.2f km od obiektu</string>
    <string name="address">%1$s ul. %2$s, %3$s %4$s</string>
    <string name="openHours">%1$s (%2$s)</string>
    <string name="card_number">Numer karty</string>
    <string name="card_expiry">Data ważności</string>
    <string name="exercises_secondInfo">Pamiętaj, że nieprawidłowe wykonywacnie ćwiczenia może prowadzić do kontuzji. Zwróć uwagę na prawidłową postawę ciała i osiągaj swoje cele!</string>
    <string name="exercises_firstInfo">Zeskanuj kod QR znajdujący się na urządzeniu aby uzyskać przykładowe ćwiczenia, które można wykonać na urządzeniu</string>
    <string name="scanCode">Zeskanuj kod</string>
    <string name="data_not_given">Brak danych</string>
    <string name="editProfile">Edytuj profil</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="questionToCoach">Masz pytanie? Skontakuj się ze mną!</string>
    <string name="coach">Trener</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="add">Dodaj</string>
    <string name="change_password">Zmień hasło</string>
    <string name="contractTerminationInfo">Karnet %s zostanie skrócony do ostatniego dnia tego miesiąca. Opłata za zerwanie umowy jest jednorazowa.</string>
    <plurals name="months_plural">
        <item quantity="one">%d miesiąc</item>
        <item quantity="few">%d miesiące</item>
        <item quantity="other">%d miesięcy</item>
    </plurals>
</resources>
