<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.signInFragment.SignInFragment"
        android:background="@color/black90">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/imageView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/screen_padding"
            android:padding="@dimen/screen_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="@dimen/layout_elevation"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:focusable="true">

        <ImageView
                android:id="@+id/signInFragment_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_anim"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/signInFragment_userName"/>

        <com.example.fitfactory.presentation.components.FancyEditText
                android:id="@+id/signInFragment_userName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/big_margin"
                android:fontFamily="sans-serif"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/primaryLight"
                android:theme="@style/FancyEditText"
                app:layout_constraintTop_toBottomOf="@+id/signInFragment_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundColor="@color/black90"
                app:color="@color/primaryLight"
                app:hintColor="@color/black70"
                app:iconColor="@color/primaryDark"
                app:iconLeft="@drawable/ic_user"
                app:outlineColor="@color/black70"/>

        <com.example.fitfactory.presentation.components.FancyEditText
                android:id="@+id/signInFragment_userPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/primaryLight"
                android:theme="@style/FancyEditText"
                app:layout_constraintTop_toBottomOf="@+id/signInFragment_userName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundColor="@color/black90"
                app:color="@color/primaryLight"
                app:hintColor="@color/black70"
                app:iconColor="@color/primaryDark"
                app:iconLeft="@drawable/ic_password"
                app:outlineColor="@color/black70"/>

        <TextView
                android:id="@+id/signInFragment_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/big_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_userPassword"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextViewLabel"/>

        <ImageView
                android:id="@+id/signInFragment_googleSignIn"
                android:layout_width="@dimen/login_icon_size"
                android:layout_height="@dimen/login_icon_size"
                android:src="@drawable/ic_google"
                android:scaleType="center"
                android:background="@drawable/load_button_anim"
                android:backgroundTint="#EA4335"
                android:layout_marginTop="@dimen/big_margin"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_forgotPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signInFragment_facebookSignIn"/>
        <ImageView
                android:id="@+id/signInFragment_facebookSignIn"
                android:layout_width="@dimen/login_icon_size"
                android:layout_height="@dimen/login_icon_size"
                android:src="@drawable/ic_facebook"
                android:scaleType="center"
                android:background="@drawable/load_button_anim"
                android:backgroundTint="#295396"
                android:layout_marginTop="@dimen/big_margin"
                app:layout_constraintStart_toEndOf="@id/signInFragment_googleSignIn"
                app:layout_constraintEnd_toStartOf="@id/signInFragment_signIn"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_forgotPassword"/>
        <ImageView
                android:id="@+id/signInFragment_signIn"
                android:layout_width="@dimen/login_icon_size"
                android:layout_height="@dimen/login_icon_size"
                android:src="@drawable/ic_arrowright"
                android:scaleType="center"
                android:background="@drawable/load_button_anim"
                android:backgroundTint="@color/primaryLight"
                android:layout_marginTop="@dimen/big_margin"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_forgotPassword"
                app:layout_constraintStart_toEndOf="@id/signInFragment_facebookSignIn"
                app:layout_constraintEnd_toEndOf="parent"/>

        <View
                android:id="@+id/signInFragment_separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="128dp"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                android:background="@color/primaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_forgotPassword"/>

        <TextView
                android:id="@+id/signInFragment_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_marginTop="@dimen/big_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_separator"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextViewLabel"/>

        <ImageView
                android:id="@+id/signInFragment_logotype"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="@dimen/big_margin"
                android:src="@drawable/logotype"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInFragment_signUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>